--- a/app/views/antigen/v1/global-registration/address-person-1.html
+++ b/app/views/antigen/v1/global-registration/address-person-1.html
@@ -39,7 +39,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="address-1-person-1" name="address-person-1" type="radio" value="{{data['address']}}" {{ checked("address-person-1", "data['address']") }}>
               <label class="govuk-label govuk-radios__label" for="address-1-person-1">
-                {{ data['address'] or '24 Green Lane' }} (the same as {{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }})
+                {{ data['address'] or '24 Green Lane' }} (the same as {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }})
               </label>
             </div>
             <div class="govuk-radios__item">
@@ -62,7 +62,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="home-postcode-1-person-1" name="home-postcode-person-1" type="radio" value="Yes" {{ checked("home-postcode-person-1", "Yes") }}>
               <label class="govuk-label govuk-radios__label" for="home-postcode-1-person-1">
-                {{ data['home-postcode'] or 'LS1 3BE' }} (the same as {{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }})
+                {{ data['home-postcode'] or 'LS1 3BE' }} (the same as {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }})
               </label>
             </div>
             <div class="govuk-radios__item">
