--- a/app/views/antigen/v1/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v1/global-registration/people-confirmed-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/check-your-answers-person-1">Back</a>
+  <!-- <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/check-your-answers-person-1">Back</a> -->
 {% endblock %}
 
 {% block content %}
@@ -26,9 +26,11 @@
 
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-      <p>You can add up to 3 people you live with for testing.</p>
-
-      <p>Once you’ve confirmed who needs testing, you can continue.</p>
+      <p class="govuk-body">
+        You can add up to 3 people you live with for testing.<br><br>
+        A maximum of 2 people can arrive on the same motorbike. If you plan to travel by motorbike, you can only get a test for you and one other person you live with.<br><br>
+        Once you’ve confirmed who needs testing, you can continue.
+      </p>
 
       <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -40,7 +42,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }}</th>
+            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
             <td class="govuk-table__cell">
               {{ data['email-address'] or 'email@example.com' }}
               <br>
