--- a/app/views/antigen/v2/global-registration/1-have-you-travelled-overseas-person-1.html
+++ b/app/views/antigen/v2/global-registration/1-have-you-travelled-overseas-person-1.html
@@ -45,7 +45,7 @@
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="have-you-travelled-overseas-1-person-1" name="have-you-travelled-overseas-person-1" data-aria-controls="conditional-have-you-travelled-overseas-1-person-1" type="radio" value="Yes" {{ checked("have-you-travelled-overseas-person-1", "Yes") }}>
                             <label class="govuk-label govuk-radios__label" for="have-you-travelled-overseas-1-person-1">
-                                Yes, they have travelled overseas
+                                Yes, they travelled overseas
                             </label>
                         </div>
                         <div class="govuk-radios__item">
