--- a/app/views/antigen/v2/global-registration/email-address-person-1.html
+++ b/app/views/antigen/v2/global-registration/email-address-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Does the person who needs a test have an email address?" %}
+{% set pageTitle = "What's their email address?" %}
 
 {% extends "includes/layout.html" %}
 
