--- a/app/views/antigen/v2/global-registration/fingerprick-test.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test.html
@@ -29,12 +29,17 @@
               </h1>
             </legend>
             <span id="fingerprick-test-hint" class="govuk-body">
-              <strong>They will only receive an antibody test kit if they test positive for coronavirus.</strong><br><br>
-              The antibody test is a 'fingerprick' blood test to see if you've had a previous infection. This will help the NHS learn more about who's had the virus more than once, and how it has spread.<br><br>
-              They will be sent 2 antibody test kits. The kits will arrive by post at their home address 3 weeks apart. They do each test on themselves at home. They can ask a friend or relative to help.<br><br>
-              The antibody tests have to be completed and posted back straight away. It's safe to leave home to post a test while you are self-isolating.
+              <strong>The antibody test will help the NHS learn more about who's had the virus more than once, and how it has spread.</strong><br><br>
+              What they need to know:<br><br>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>They will only be sent an antibody test if they test positive for coronavirus.</li>
+                <li>They will receive 2 antibody tests in the post to their home address.</li>
+                <li>The antibody test is a 'fingerprick' blood test.</li>
+                <li>They do the test on themselves at home (they can ask a friend or relative to help)</li>
+              </ul>
+              They will receive full instructions on how to return the completed antibody tests.
             </span><br><br><br>
-            
+
             <details class="govuk-details govuk-!-margin-bottom-2" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
@@ -43,7 +48,7 @@
               </summary>
               <div class="govuk-details__text">
                 <div class="govuk-!-margin-bottom-5 govuk-!-margin-top-4 videoWrapper">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/okTozcGMDlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/BUgBOSgnMv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
             </details>
