--- a/app/views/antigen/v2/order-home-test-kit/confirmation.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation.html
@@ -28,7 +28,7 @@
       </ul>
 
       <h3 class="govuk-heading-m">Antibody testing</h3>
-      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
+      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. It is safe to leave home to post your test while you're self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
 
       <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
