--- a/app/views/antigen/v2/order-home-test-kit/order-summary.html
+++ b/app/views/antigen/v2/order-home-test-kit/order-summary.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Order summary" %}
+{% set pageTitle = "Your home PCR test order summary" %}
 
 {% extends "includes/layout.html" %}
 
@@ -81,6 +81,7 @@
         <li>I agree with the <a href="#">Terms and conditions</a> and <a href="#">Privacy policy</a> of this service</li>
         <li>I am happy to be contacted about my order</li>
         <li>I'll aim to return the kit within 48 hours</li>
+        <li>If I test positive, and I have agreed to do so, I will take part in antibody testing</li>
       </ul>
 
       <div class="govuk-form-group">
