--- a/app/views/antigen/v2/site-appointment-booking/confirmation.html
+++ b/app/views/antigen/v2/site-appointment-booking/confirmation.html
@@ -114,8 +114,8 @@ set version = "v2" %}
     <ul class="govuk-list govuk-list--bullet">
       <li>a copy of your test site pass (and passes for any children getting a test) - have the QR code in the pass ready to display (on the email, printed off or as a screenshot) or it could delay your entry to the test site</li>
       <li>photo ID - a driving licence or passport for each person getting a test</li>
-      <li>hand-sanitiser or antiseptic wipes - because we may ask you to do the test yourself, so you'll need clean hands</li>
-      <li>face coverings for each person aged 3 years and over, if you are visiting a walk-through site</li>
+      <li>hand sanitiser or antiseptic wipes - because we may ask you to do the test yourself, so you'll need clean hands</li>
+      <!-- <li>face coverings for each person aged 3 years and over, if you are visiting a walk-through site</li> -->
     </ul>
 
     <p class="govuk-body">You may also want to bring a bottle of water, as we cannot provide water at the test site.</p>
@@ -129,35 +129,55 @@ set version = "v2" %}
 
     <p class="govuk-body">
       Watch these videos to see what happens at the test sites.<br>
-      <a class="govuk-link" href="#">Learn about self testing.</a><br>
-      <a class="govuk-link" href="#">Learn about walk-through sites.</a>
+      <a class="govuk-link" href="#">Learn about self testing</a><br>
+      <a class="govuk-link" href="#">Learn about walk-through sites</a>
     </p>
 
     <p class="govuk-body">It usually takes no more than 10 minutes to perform the test. You'll receive your test results by text message a day or two later.</p>
 
-    <h3 class="govuk-heading-s">At walk-through sites</h3>
+    <h3 class="govuk-heading-s">At walk-through sites:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>you can choose to go by foot, bike or car (parking may not be available on the site)</li>
-      <li>wear a face covering</li>
+      <!-- <li>wear a face covering</li> -->
       <li>you can ask for a staff member to guide you as you do the test yourself</li>
     </ul>
 
-    <h3 class="govuk-heading-s">At drive-through sites</h3>
+    <div class="govuk-warning-text govuk-!-margin-top-7">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text govuk-!-font-size-19">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        At a walk-through test site everyone must wear a face covering, even if they are normally exempt, except children under the age of 3 (or under the age of 5 in Scotland).
+      </strong>
+    </div>
+
+    <h3 class="govuk-heading-s">At drive-through sites:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>at some test sites, you may be able to ask a staff member to do the test for you</li>
     </ul>
 
-    <h2 class="govuk-heading-m">If you're bringing a baby or a child</h2>
+    <details class="govuk-details govuk-!-margin-bottom-6 govuk-!-margin-top-6" data-module="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          If you're bringing a baby or a child
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        <p class="govuk-body">If you're bringing a child aged 11 or under to be tested, you (their parent or guardian) will be asked to swab test your child. You'll be given paper instructions.</p>
 
-    <p class="govuk-body">If you're bringing a child aged 11 or under to be tested, you (their parent or guardian) will be asked to swab test your child. You'll be given paper instructions.</p>
+        <p class="govuk-body">You'll swab test your child either in a testing bay (walk-through) or from the back seat of your vehicle (drive-through). If you're going to a drive-through site, you may want to bring another adult, so one of you can already be seated in the back when you arrive. Otherwise, you'll need to climb onto the back seat.</p>
 
-    <p class="govuk-body">You'll swab test your child either in a testing bay (walk-through) or from the back seat of your vehicle (drive-through). If you're going to a drive-through site, you may want to bring another adult, so one of you can already be seated in the back when you arrive. Otherwise, you'll need to climb onto the back seat.</p>
+        <p class="govuk-body">You'll not be able to leave the vehicle or the testing bay during the test.</p>
 
-    <p class="govuk-body">You'll not be able to leave the vehicle or the testing bay during the test.</p>
+        <p class="govuk-body">Before you swab test your child, you'll need to read the paper instructions. It can take about 20 minutes to read the instructions and then do the test.</p>
 
-    <p class="govuk-body">Before you swab test your child, you'll need to read the paper instructions. It can take about 20 minutes to read the instructions and then do the test.</p>
+        <p class="govuk-body">You may want to bring something to keep your child entertained while you read and then swab yourself.</p>
+      </div>
+    </details>
 
-    <p class="govuk-body">You may want to bring something to keep your child entertained while you read and then swab yourself.</p>
+    <h3 class="govuk-heading-m">Antibody testing</h3>
+    <p class="govuk-body">
+      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. It is safe to leave home to post your test while you're self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
+    </p>
 
     <h2 class="govuk-heading-m">Do you need a BSL interpreter?</h2>
 
