--- a/app/views/antigen/v1/global-registration/email-address-person-1.html
+++ b/app/views/antigen/v1/global-registration/email-address-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Email Address" %}
+{% set pageTitle = "What's their email address?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/mobile-number-person-1">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/landline-number-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
