--- a/app/views/antigen/v1/global-registration/study-grade-person-1.html
+++ b/app/views/antigen/v1/global-registration/study-grade-person-1.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="study-grade-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+                Which place does {{ data['first-name-person-1'] or "Jane" }} {{ data['last-name-person-1'] or "Wilson" }} attend?
               </h1>
             </legend>
             <div class="govuk-radios govuk-!-margin-top-5">
