--- a/app/views/antigen/v1/global-registration/work-or-study-person-1.html
+++ b/app/views/antigen/v1/global-registration/work-or-study-person-1.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="work-or-study-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                Does {{ data['first-name-person-1'] }} {{ data['last-name-person-1'] }} travel to nursery, work or a place of education?
+                Does {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }} travel to nursery, work or a place of education?
               </h1>
             </legend>
             <span id="work-or-study-hint" class="govuk-body">
