--- a/app/views/antigen/v1/order-home-test-kit/confirmation.html
+++ b/app/views/antigen/v1/order-home-test-kit/confirmation.html
@@ -27,10 +27,21 @@
         <li>how to return your sample</li>
       </ul>
 
+      <h3 class="govuk-heading-m">Instructions in alternative formats</h3>
+      <p class="govuk-body">
+        <a class="govuk-link" target="blank" href="#">Alternative format instructions</a> are available online.<br><br>
+        Royal National Institute of Blind People (RNIB) can send you braille, audio or large print instructions. <a class="govuk-link" href="#">Order online</a> or call 0303 123 9999 (Monday to Friday 8am to 8pm and Saturday 9am to 1pm).
+      </p>
+
       <h3 class="govuk-heading-m">If you're worried</h3>
       <p class="govuk-body">
         If your condition gets worse, or you do not get better after 7 days, use the <a class="govuk-link" href="#">NHS 111 online coronavirus service</a>.<br><br>
         Only call 111 if you cannot get help online. For a medical emergency, dial 999.
+      </p>
+
+      <h3 class="govuk-heading-m">We want to hear from you</h3>
+      <p class="govuk-body">
+        <a class="govuk-link" href="#">What did you think of our service?</a> (takes 3 minutes)
       </p>
 
     </div>
