--- a/app/views/antigen/v1/order-home-test-kit/delivery-address.html
+++ b/app/views/antigen/v1/order-home-test-kit/delivery-address.html
@@ -23,7 +23,7 @@
           </legend>
 
           <p>
-            <strong class="govuk-!-margin-bottom-4 govuk-!-display-block govuk-!-font-size-24">Postcode</strong>
+            <strong class="govuk-!-margin-bottom-4 govuk-!-display-block">Postcode</strong>
             <strong>{{ data['delivery-address-postcode'] | default('LS1 3BE') }}</strong>
             <a href="/antigen/{{version}}/order-home-test-kit/postcode" class="govuk-!-margin-left-5">
               Change
@@ -32,8 +32,8 @@
           </p>
 
           <div class="govuk-form-group">
-            <label class="govuk-label govuk-!-font-size-24" for="delivery-address">
-              <strong class="govuk-!-font-size-24">Address</strong>
+            <label class="govuk-label" for="delivery-address">
+              Address
             </label>
             <select class="govuk-select" id="delivery-address" name="delivery-address">
               <option>Select from 5 addresses</option>
