--- a/app/views/antigen/v1/order-home-test-kit/home-address-manual.html
+++ b/app/views/antigen/v1/order-home-test-kit/home-address-manual.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "What is your home address?" %}
+{% set pageTitle = "Enter your home address" %}
 
 {% extends "includes/layout.html" %}
 
