--- a/app/views/antigen/v2/global-registration/industry-person-1.html
+++ b/app/views/antigen/v2/global-registration/industry-person-1.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="industry-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                Select {{ data['first-name-person-1'] }} {{ data['last-name-person-1'] }}'s area of work
+                Select {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}'s area of work
               </h1>
             </legend>
             <span id="industry-hint" class="govuk-body">
