--- a/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
@@ -69,7 +69,7 @@
     </p>
 
       <h2 class="govuk-heading-m">Antibody testing</h2>
-      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
+      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. It is safe to leave home to post your test while you're self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
 
      <h2 class="govuk-heading-m">Getting help</h2>
 
@@ -86,7 +86,7 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-  <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/01-test-result-1">
+  <a href="/antigen/{{version}}/sms-messages/01-test-result-1">
     <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 1</div>
   </a>
 </div>
