--- a/app/views/antigen/v2/order-home-test-kit/home-address.html
+++ b/app/views/antigen/v2/order-home-test-kit/home-address.html
@@ -44,7 +44,7 @@
 
           <div class="govuk-form-group">
             <label class="govuk-label" for="home-address">
-              <strong class="govuk-!-font-size-19">Address</strong>
+              Address
             </label>
             <select class="govuk-select" id="home-address" name="home-address">
               <option>Select from 5 addresses</option>
