--- a/app/views/antigen/v2/site-appointment-booking/confirmation-email-old.html
+++ b/app/views/antigen/v2/site-appointment-booking/confirmation-email-old.html
@@ -146,10 +146,20 @@
     </div>
   </div>
 
-  <div class="proto-action big">
-    <a href="/antigen/{{version}}/sms-messages/01-test-result-1">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 1</div>
-    </a>
-  </div>
+{% endblock %}
 
+{% block bodyEnd %}
+{% if data['vehicle-registration-number'] !== undefined %}
+<div class="proto-action" style="width: 140px">
+  <a href="/antigen/{{version}}/site-appointment-booking/instructions-drive-through">
+    <div class="proto-action-text govuk-!-margin-left-3">Read instructions</div>
+  </a>
+</div>
+{% else %}
+<div class="proto-action" style="width: 140px">
+  <a href="/antigen/{{version}}/site-appointment-booking/instructions-walk-through">
+    <div class="proto-action-text govuk-!-margin-left-3">Read instructions</div>
+  </a>
+</div>
+{% endif %}
 {% endblock %}
