--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -147,9 +147,10 @@
 
       </form>
 
+      <!-- routing done with nunjucks here because of an issue with Safari -->
       {% if data['way-to-test'] == "drive-through" or data['way-to-test'] == "walk-through" %}
 
-      <form class="form" action="/antigen/{{version}}/site-appointment-booking/" method="post" style="display: inline-block;">
+      <form class="form" action="/antigen/{{version}}/site-appointment-booking/find-test-site" method="post" style="display: inline-block;">
 
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
