--- a/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
@@ -199,7 +199,7 @@
       </dl>
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Vaccination and travel history</h2>
-      <p class="govuk-body">If their test is positive, we may use this information for contact tracing.</p>
+      <p class="govuk-body">We may use this information to monitor new coronavirus variants.</p>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
@@ -314,7 +314,7 @@
       </dl>
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Employment and education</h2>
-      <p class="govuk-body">We may use this information to monitor new coronavirus variants</p>
+      <p class="govuk-body">If their test is positive, we may use this information for contact tracing.</p>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
