--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -225,7 +225,7 @@
       </dl>
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Vaccination and travel history</h2>
-      <p class="govuk-body">We may use this information to monitor new coronavirus .</p>
+      <p class="govuk-body">We may use this information to monitor new coronavirus variants.</p>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
