--- a/app/views/lfd-collection-registration/v1/different-test.html
+++ b/app/views/lfd-collection-registration/v1/different-test.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Sorry, rapid lateral flow tests are not right for you" %}
+{% set pageTitle = "Sorry, you need to get a different test" %}
 
 {% extends "includes/layout.html" %}
 
@@ -27,22 +27,14 @@
             {{ pageTitle }}
         </h1>
         <p class="govuk-body">
-          They are for people who do not have coronavirus symptoms.
-        </p>
-        <p class="govuk-body govuk-!-margin-top-6">
-          <strong class="govuk-!-font-size-24">What to do</strong>
-        </p>     
-        <p class="govuk-body">
-          Because you have symptoms you must:
+          Rapid lateral flow tests are for people who do not have coronavirus symptoms.<br><br>
+          Because you said you have symptoms, you must:
         </p>   
         <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
+          <li><a href="../../antigen/v1/govuk/get-coronavirus-test.html" class="govuk-link">get a PCR test to check if you have coronavirus</a></li>
           <li>stay at home and self-isolate</li>
-          <li>get a different test (called a PCR test) to check if you have the virus</li>
         </ul>  
-        <p class="govuk-body">
-            <a href="../../antigen/v1/govuk/get-coronavirus-test.html" class="govuk-link">Get the test for people who have symptoms</a>
-        </p>
-
+        
     </div>
 </div>
 
