--- a/app/views/lfd-collection-registration/v1/service-unavailable-country.html
+++ b/app/views/lfd-collection-registration/v1/service-unavailable-country.html
@@ -27,7 +27,7 @@
       </h1>
       <p class="govuk-body">
         At the moment, it's not available in every country in the UK.<br><br>
-        There are other ways to get tested if you do not have
+        There are other ways to get tested if you do not have symptoms.
       </p>
 
       <h2 class="govuk-heading-m">Find out about the other ways to get rapid lateral flow tests</h2>
