--- a/app/views/lfd-collection-registration/v1/index.html
+++ b/app/views/lfd-collection-registration/v1/index.html
@@ -15,10 +15,9 @@
       <li>a COVID-19 test site collection point</li>
       <li>your school, college, university or workplace collection point</li>
     </ul>
-    <p class="govuk-body">You do not need a collect code to get rapid lateral flow tests from a pharmacy. See other ways to get a rapid lateral flow test.</p>
+    <p class="govuk-body">You do not need a collect code to get rapid lateral flow tests from a pharmacy. <a href="https://nhsuk-cms-test-and-trace-drafts.nhswebsite-dev.nhs.uk/conditions/coronavirus-covid-19/testing/getting-regular-tests-if-you-do-not-have-symptoms/" class="govuk-link">See other ways to get a rapid lateral flow test</a>.</p>
 
     <h2 class="govuk-heading-m">How it works</h2>
-    <p class="govuk-body">You will receive a text with your temporary password. You must use this within 7 days before it expires. Sign in with your email address as your username.</p>
 
     <h3 class="govuk-heading-s">1. Get a collect code</h3>
     <p class="govuk-body">
