--- a/app/views/bulk-order-home-kits/v1/sms-manager.html
+++ b/app/views/bulk-order-home-kits/v1/sms-manager.html
@@ -88,7 +88,7 @@
 
 {% block bodyEnd %}
 <div class="proto-action invisible">
-  <a href="/bulk-order-home-kits/{{version}}/index-organisation-manager">
+  <a href="/bulk-order-home-kits/{{version}}/index-manager">
     <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
   </a>
 </div>
