--- a/app/views/lfd-collection-registration/v1/index.html
+++ b/app/views/lfd-collection-registration/v1/index.html
@@ -37,7 +37,7 @@
     </p>
 
     <a href="/lfd-collection-registration/{{version}}/do-you-have-symptoms" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
-      Get a collect code
+      Continue
     </a>
 
   </div>
