--- a/app/views/bulk-order-home-kits/v1/index-manager.html
+++ b/app/views/bulk-order-home-kits/v1/index-manager.html
@@ -1,34 +1,117 @@
 {% set version = "v1" %}
 {% set pageTitle = "You are invited to be a PCR (polymerase chain reaction) Home Test Manager" %}
-{% extends "includes/layout.html" %}
+<!DOCTYPE html>
+<!--[if lt IE 9]>
+<html class="lte-ie8" lang="en">
+  <![endif]--><!--[if gt IE 8]><!-->
+  <html lang="en" style="height: 100%">
+    <!--<![endif]-->
+    <head>
+      {% include "includes/head.html" %}
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta name="description" content="Find information on coronavirus, including guidance, support, announcements and statistics.">
+      <meta charset="utf-8">
+      <title>Coronavirus (COVID-19): what you need to do - GOV.UK</title>
+      <!--[if gt IE 8]><!-->
+      <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/static/govuk-template-ec01c15a0e8793975bcaf519e4eb3ec0d68a99610c6b262fa7a1b3c7f76f6176.css">
+      <!--<![endif]-->
+      <!--[if IE 8]>
+      <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/static/govuk-template-ie8-d542fa9c0b1884e3f91f37f9ae1574f44a5a83d506d645292555c2b5572498e9.css" />
+      <![endif]-->
+      <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/static/govuk-template-print-1076519521c2fffbbf75ab3b0d3b32ee2d96ac7e9778f1cdfac1771eefd1a1c0.css">
+      <link rel="stylesheet" media="all" href="https://www.gov.uk/assets/static/fonts-c57ab80a95f2b1764162611b3c98a4c098b356f8e30baf1e50cd63edea464c01.css">
+      <!--[if lt IE 9]><script src="https://www.gov.uk/assets/static/ie-a4524544a53d57a7e259b4bb966b9c32557c98c920b77e52d09304642b68401a.js"></script><![endif]-->
+      <link rel="shortcut icon" href="https://www.gov.uk/assets/static/favicon-8d811b8c3badbc0b0e2f6e25d3660a96cc0cca7993e6f32e98785f205fc40907.ico" type="image/x-icon">
+      <link rel="mask-icon" href="https://www.gov.uk/assets/static/gov.uk_logotype_crown-de738c3fcce8ce2a91b67e89787090dc24a5cda0275ab6b75f6226c5b9619d3d.svg" color="#0b0c0c">
+      <link rel="apple-touch-icon" sizes="180x180" href="https://www.gov.uk/assets/static/apple-touch-icon-180x180-ea1cbb1cbbeddfff275dfa6e8e46b84cd530892df79dc4882a8f99b802b49a90.png">
+      <link rel="apple-touch-icon" sizes="167x167" href="https://www.gov.uk/assets/static/apple-touch-icon-167x167-181e404a50c572923285fb83f0fbd78da6b4e38e3ce52f8e6b8e29da8586450a.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="https://www.gov.uk/assets/static/apple-touch-icon-152x152-02457fcdcee8d309276305af2233d41bfb8fd055e855727d355e61bce7ffa9bb.png">
+      <link rel="apple-touch-icon" href="https://www.gov.uk/assets/static/apple-touch-icon-a318f305290c523aed80082456175b46c95350c0eeac93f42e78a71c7a55544e.png">
+      <meta name="theme-color" content="#0b0c0c">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/static/core-layout-9cb3fbb510e7fdfc3852b0e6b017557267dad3c1c27b714d75104324dc28ebbe.css">
+      <!--[if lte IE 8]>
+      <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/static/core-layout-ie8-773f4cacc5b2d19e924e37800dca2a1e66acd94c661e1cd95a8a165021bdc667.css" />
+      <script>var ieVersion = 8;</script><![endif]-->
+      <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/static/core-layout-print-8e40ee8bf8b49850b34ea341226ca4421597a64ffda587b0f72111677fd368bd.css">
+      <meta property="og:image" content="https://www.gov.uk/assets/static/opengraph-image-a1f7d89ffd0782738b1aeb0da37842d8bd0addbd724b8e58c3edbc7287cc11de.png">
+      <link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
+      <link href="/public/stylesheets/govuk-site.css" media="all" rel="stylesheet" type="text/css" />
+    </head>
+    <body class="full-width" style="height: 100%">
+      {% include "includes/gtm-noscript.html" %}
 
-{% block content %}
-
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
-
-      <p class="govuk-body govuk-!-margin-bottom-1">This service lets you manage bulk PCR home test kit ordering. As a PCR Home Test Manager, you can:</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>order home test kits for up to 100 people at a time</li>
-        <li>add PCR Home Test Operatives so they can order home test kits too</li>
-      </ul>
-
-      <h2 class="govuk-heading-m">What to do next</h2>
-      <p class="govuk-body">You will receive a text with your temporary password. You must use this within 7 days before it expires. Sign in with your email address as your username.</p>
-
-      <a href="/bulk-order-home-kits/{{version}}/login-temporary" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
-        Start now
-      </a>
-
-      <div class="proto-action invisible">
-        <a href="/bulk-order-home-kits/{{version}}/sms-manager">
-          <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
-        </a>
+      <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+      <div id="skiplink-container">
+        <div>
+          <a href="#content" class="skiplink govuk-link">Skip to main content</a>
+        </div>
       </div>
+      <div class="email-header govuk-!-padding-top-5">
+        <img src="/public/images/email-header.png" alt="email header" />
+      </div>
+      <header role="banner" id="global-header">
+        <div class="header-wrapper">
+          <div class="header-global">
+            <div class="header-logo">
+              <a href="/antigen/scenario" title="Go to the GOV.UK homepage" class="content govuk-header__link govuk-header__link--homepage" id="logo" data-module="track-click" data-track-category="homeLinkClicked" data-track-action="homeHeader">
+                <span class="govuk-header__logotype">
+                  <svg role="presentation" focusable="false" class="govuk-header__logotype-crown" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 132 97" height="30" width="36">
+                    <path fill="currentColor" fill-rule="evenodd" d="M25 30.2c3.5 1.5 7.7-.2 9.1-3.7 1.5-3.6-.2-7.8-3.9-9.2-3.6-1.4-7.6.3-9.1 3.9-1.4 3.5.3 7.5 3.9 9zM9 39.5c3.6 1.5 7.8-.2 9.2-3.7 1.5-3.6-.2-7.8-3.9-9.1-3.6-1.5-7.6.2-9.1 3.8-1.4 3.5.3 7.5 3.8 9zM4.4 57.2c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.5-1.5-7.6.3-9.1 3.8-1.4 3.5.3 7.6 3.9 9.1zm38.3-21.4c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.6-1.5-7.6.3-9.1 3.8-1.3 3.6.4 7.7 3.9 9.1zm64.4-5.6c-3.6 1.5-7.8-.2-9.1-3.7-1.5-3.6.2-7.8 3.8-9.2 3.6-1.4 7.7.3 9.2 3.9 1.3 3.5-.4 7.5-3.9 9zm15.9 9.3c-3.6 1.5-7.7-.2-9.1-3.7-1.5-3.6.2-7.8 3.7-9.1 3.6-1.5 7.7.2 9.2 3.8 1.5 3.5-.3 7.5-3.8 9zm4.7 17.7c-3.6 1.5-7.8-.2-9.2-3.8-1.5-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.3 3.5-.4 7.6-3.9 9.1zM89.3 35.8c-3.6 1.5-7.8-.2-9.2-3.8-1.4-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.4 3.6-.3 7.7-3.9 9.1zM69.7 17.7l8.9 4.7V9.3l-8.9 2.8c-.2-.3-.5-.6-.9-.9L72.4 0H59.6l3.5 11.2c-.3.3-.6.5-.9.9l-8.8-2.8v13.1l8.8-4.7c.3.3.6.7.9.9l-5 15.4v.1c-.2.8-.4 1.6-.4 2.4 0 4.1 3.1 7.5 7 8.1h.2c.3 0 .7.1 1 .1.4 0 .7 0 1-.1h.2c4-.6 7.1-4.1 7.1-8.1 0-.8-.1-1.7-.4-2.4V34l-5.1-15.4c.4-.2.7-.6 1-.9zM66 92.8c16.9 0 32.8 1.1 47.1 3.2 4-16.9 8.9-26.7 14-33.5l-9.6-3.4c1 4.9 1.1 7.2 0 10.2-1.5-1.4-3-4.3-4.2-8.7L108.6 76c2.8-2 5-3.2 7.5-3.3-4.4 9.4-10 11.9-13.6 11.2-4.3-.8-6.3-4.6-5.6-7.9 1-4.7 5.7-5.9 8-.5 4.3-8.7-3-11.4-7.6-8.8 7.1-7.2 7.9-13.5 2.1-21.1-8 6.1-8.1 12.3-4.5 20.8-4.7-5.4-12.1-2.5-9.5 6.2 3.4-5.2 7.9-2 7.2 3.1-.6 4.3-6.4 7.8-13.5 7.2-10.3-.9-10.9-8-11.2-13.8 2.5-.5 7.1 1.8 11 7.3L80.2 60c-4.1 4.4-8 5.3-12.3 5.4 1.4-4.4 8-11.6 8-11.6H55.5s6.4 7.2 7.9 11.6c-4.2-.1-8-1-12.3-5.4l1.4 16.4c3.9-5.5 8.5-7.7 10.9-7.3-.3 5.8-.9 12.8-11.1 13.8-7.2.6-12.9-2.9-13.5-7.2-.7-5 3.8-8.3 7.1-3.1 2.7-8.7-4.6-11.6-9.4-6.2 3.7-8.5 3.6-14.7-4.6-20.8-5.8 7.6-5 13.9 2.2 21.1-4.7-2.6-11.9.1-7.7 8.8 2.3-5.5 7.1-4.2 8.1.5.7 3.3-1.3 7.1-5.7 7.9-3.5.7-9-1.8-13.5-11.2 2.5.1 4.7 1.3 7.5 3.3l-4.7-15.4c-1.2 4.4-2.7 7.2-4.3 8.7-1.1-3-.9-5.3 0-10.2l-9.5 3.4c5 6.9 9.9 16.7 14 33.5 14.8-2.1 30.8-3.2 47.7-3.2z">
+                    </path>
+                    <image src="https://www.gov.uk/assets/static/gov.uk_logotype_crown_invert_trans-203e1db49d3eff430d7dc450ce723c1002542fe1d2bce661b6d8571f14c1043c.png" xlink:href="" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+                    </image>
+                  </svg>
+                  <span class="govuk-header__logotype-text">
+                  GOV.UK
+                  </span>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="wrapper" id="wrapper">
+        <main id="content" role="main" class="content ">
+          <header class="covid__page-header covid__page-header--landing-page govuk-!-margin-bottom-0" style="border-top: 10px solid #1d70b8">
 
-    </div>
-  </div>
+          </header>
+          <div class="govuk-width-container covid__page" data-module="coronavirus-landing-page">
+            <div class="govuk-grid-row">
 
-{% endblock %}
+                <div class="govuk-grid-column-two-thirds">
+
+                  <h1 class="govuk-heading-l govuk-!-margin-bottom-6 govuk-!-margin-top-8">{{ pageTitle }}</h1>
+
+                    <p class="govuk-body govuk-!-margin-bottom-1">This service lets you manage bulk PCR home test kit ordering. As a PCR Home Test Manager, you can:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>order home test kits for up to 100 people at a time</li>
+                      <li>add PCR Home Test Operatives so they can order home test kits too</li>
+                    </ul>
+
+                    <h2 class="govuk-heading-m">What to do next</h2>
+                    <p class="govuk-body">You will receive a text with your temporary password. You must use this within 7 days before it expires. Sign in with your email address as your username.</p>
+
+                    <a href="/bulk-order-home-kits/{{version}}/login-temporary" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
+                      Start now
+                    </a>
+
+                    <div class="proto-action invisible">
+                      <a href="/bulk-order-home-kits/{{version}}/sms-manager">
+                        <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
+                      </a>
+                    </div>
+
+                </div>
+
+            </div>
+          </div>
+        </main>
+      </div>
+      <script src="https://www.gov.uk/assets/static/libs/jquery/jquery-1.12.4-c731c20e2995c576b0509d3bd776f7ab64a66b95363a3b5fae9864299ee594ed.js"></script>
+      <script src="https://www.gov.uk/assets/static/header-footer-only-0909905c557863f637a34fda26eaad5fcb5fcdd7063c76ec0a2087b291b4635e.js"></script>
+      <script>if (typeof window.GOVUK === 'undefined') document.body.className = document.body.className.replace('js-enabled', '');</script>
+      <script src="/public/javascripts/govuk-site.js"></script>
+      </script>
+    </body>
+  </html>
