--- a/app/views/bulk-order-home-kits/v1/index-manager.html
+++ b/app/views/bulk-order-home-kits/v1/index-manager.html
@@ -96,9 +96,9 @@
                       Start now
                     </a>
 
-                    <div class="proto-action invisible">
+                    <div class="proto-action big">
                       <a href="/bulk-order-home-kits/{{version}}/sms-manager">
-                        <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
+                        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message</div>
                       </a>
                     </div>
 
