--- a/app/views/bulk-order-home-kits/v1/sms-operative.html
+++ b/app/views/bulk-order-home-kits/v1/sms-operative.html
@@ -87,9 +87,9 @@
 {% endblock %}
 
 {% block bodyEnd %}
-<div class="proto-action invisible">
+<div class="proto-action big">
   <a href="/bulk-order-home-kits/{{version}}/index-operative">
-    <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Invitation email</div>
   </a>
 </div>
 {% endblock %}
