--- a/app/views/bulk-order-home-kits/v1/index-operative.html
+++ b/app/views/bulk-order-home-kits/v1/index-operative.html
@@ -95,9 +95,9 @@
                     Start now
                   </a>
 
-                  <div class="proto-action invisible">
+                  <div class="proto-action big">
                     <a href="/bulk-order-home-kits/{{version}}/sms-operative">
-                      <!-- <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message 2</div> -->
+                      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Text message</div>
                     </a>
                   </div>
 
